--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="mystyles.css">
 </head>
 
 <body>
-  <link rel="stylesheet" href="mystyles.css">
 
   <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
 
@@ -46,9 +46,7 @@
     </a>
 
     <a href="https://myanimelist.net/manga/1/Monster" target="_blank">
-      <img class="image"
-        src="https://static.tvtropes.org/pmwiki/pub/images/mv5bmzzkoge4otitm2rlzi00zgm5ltlhmdatzwqxotlhytm5nmzkxkeyxkfqcgdeqxvymti2otmwndcw_v1.jpg"
-        draggable="false" />
+      <img class="image" src="https://cosmoflips.files.wordpress.com/2020/12/m1.png" draggable="false" />
     </a>
 
     <a href="https://myanimelist.net/manga/3992/Jigokusei_Remina" target="_blank">
@@ -57,7 +55,9 @@
     </a>
 
     <a href="https://myanimelist.net/manga/38071/Spirit_Circle" target="_blank">
-      <img class="image" src="https://scontent-muc2-1.xx.fbcdn.net/v/t1.6435-9/139086545_454966935908884_4575466920936425588_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=aleG6UpUNuYAX-AtJUD&_nc_ht=scontent-muc2-1.xx&oh=00_AfBEXLuaMQGZtIgrbA_x0fIoa3TMxh6v3XDlhE46p3ZJ5g&oe=64A5BAA9" draggable="false" />
+      <img class="image"
+        src="https://scontent-muc2-1.xx.fbcdn.net/v/t1.6435-9/139086545_454966935908884_4575466920936425588_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=aleG6UpUNuYAX-AtJUD&_nc_ht=scontent-muc2-1.xx&oh=00_AfBEXLuaMQGZtIgrbA_x0fIoa3TMxh6v3XDlhE46p3ZJ5g&oe=64A5BAA9"
+        draggable="false" />
     </a>
 
     <a href="https://myanimelist.net/manga/2/Berserk" target="_blank">
@@ -65,7 +65,7 @@
         draggable="false" />
     </a>
 
-    
+
 
   </div>
   <script src="myscript.js"></script>
